--- a/pertemuan-02/emmet.html
+++ b/pertemuan-02/emmet.html
@@ -7,12 +7,12 @@
 </head>
 <body>
     <header>
-        <h1></h1>
+        <h1>ini header</h1>
         <nav>
             <u1>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
+                <li><a href="#home">beranda</a></li>
+                <li><a href="#about">tentang</a></li>
+                <li><a href="#contact">kontak</a></li>
             </u1>
         </nav>
     </header>
