--- a/pertemuan-02/emmet.html
+++ b/pertemuan-02/emmet.html
@@ -17,15 +17,19 @@
         </nav>
     </header>
     <main>
-        <section>
-            <h2></h2>
-            <p></p>
+        <section id="home">
+            <h2>Selamat datang</h2>
+            <p>Ini contoh paragraf</p>
         </section>
-        <section>
-            <h2></h2>
-            <p></p>
+        <section id="about">
+            <h2>Tentang kami</h2>
+            <p>HTML digunakan untuk membuat struktur halaman web</p>
+        </section>
+        <section id="contact">
+            <h2>Kontak kami</h2>
+            <p>Contoh form</p>
         </section>
     </main>
-    <footer></footer>
+    <footer><p></p></footer>
 </body>
 </html>
