footer dokumen dengan html entity

--- a/pertemuan-02/emmet.html
+++ b/pertemuan-02/emmet.html
@@ -30,6 +30,8 @@
             <p>Contoh form</p>
         </section>
     </main>
-    <footer><p></p></footer>
+    <footer>
+        <p>&copy; 2025 Reynanda Oktarian [2511500054]</p>
+    </footer>
 </body>
 </html>
