mengedit section about

--- a/pertemuan-02/emmet.html
+++ b/pertemuan-02/emmet.html
@@ -23,7 +23,17 @@
         </section>
         <section id="about">
             <h2>Tentang kami</h2>
-            <p>HTML digunakan untuk membuat struktur halaman web</p>
+            <p>Nama: Reynanda Oktarian
+                <br>NIM: 2511500054
+                <br>Tempat Lahir: Tanjung Pandan
+                <br>Tanggal Lahir: 29-10-2007
+                <br>Hobby: Menonton anime, mendengarkan musik, dan bermain game
+                <br>Pasangan: Single
+                <br>Pekerjaan: Mahasiswa
+                <br>Nama Orang Tua: Mardedi dan Herlina
+                <br>Nama Kakak: Derry Andeka
+                <br>&#9786;
+            </p>
         </section>
         <section id="contact">
             <h2>Kontak kami</h2>
