--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <p>Ini contoh paragraf</p>
         </section>
         <section id="about">
-            <h2>Tentang kami</h2>
+            <h2>Tentang Saya</h2>
             <p>Nama: Reynanda Oktarian
                 <br>NIM: 2511500054
                 <br>Tempat Lahir: Tanjung Pandan
