menambahkan paragraf di section about

--- a/pertemuan-02/emmet.html
+++ b/pertemuan-02/emmet.html
@@ -23,17 +23,7 @@
         </section>
         <section id="about">
             <h2>Tentang Saya</h2>
-            <p>Nama: Reynanda Oktarian
-                <br>NIM: 2511500054
-                <br>Tempat Lahir: Tanjung Pandan
-                <br>Tanggal Lahir: 29-10-2007
-                <br>Hobby: Menonton anime, mendengarkan musik, dan bermain game
-                <br>Pasangan: Single
-                <br>Pekerjaan: Mahasiswa
-                <br>Nama Orang Tua: Mardedi dan Herlina
-                <br>Nama Kakak: Derry Andeka
-                <br>&#9786;
-            </p>
+            <p>Halo semua perkenalkan nama saya<strong>Reynanda Oktarian</strong></p>
         </section>
         <section id="contact">
             <h2>Kontak kami</h2>
