--- a/index.html
+++ b/index.html
@@ -1,47 +1,12 @@
+
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <title>Dasar HTML5</title>
 </head>
 <body>
-    <header>
-        <h1>ini header</h1>
-        <nav>
-            <u1>
-                <li><a href="#home">beranda</a></li>
-                <li><a href="#about">tentang</a></li>
-                <li><a href="#contact">kontak</a></li>
-            </u1>
-        </nav>
-    </header>
-    <main>
-        <section id="home">
-            <h2>Selamat datang</h2>
-            <p>Ini contoh paragraf</p>
-        </section>
-        <section id="about">
-            <h2>Tentang Saya</h2>
-            <p>Nama: Reynanda Oktarian
-                <br>NIM: 2511500054
-                <br>Tempat Lahir: Tanjung Pandan
-                <br>Tanggal Lahir: 29-10-2007
-                <br>Hobby: Menonton anime, mendengarkan musik, dan bermain game
-                <br>Pasangan: Single
-                <br>Pekerjaan: Mahasiswa
-                <br>Nama Orang Tua: Mardedi dan Herlina
-                <br>Nama Kakak: Derry Andeka
-                <br>&#9786;
-            </p>
-        </section>
-        <section id="contact">
-            <h2>Kontak kami</h2>
-            <p>Contoh form</p>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2025 Reynanda Oktarian [2511500054]</p>
-    </footer>
+  <h1>Hello World</h1>
+  <p>Ini contoh penulisan halaman HTML5 minimalis tanpa header/main/footer.</p>
 </body>
 </html>
