--- a/pertemuan-02/emmet.html
+++ b/pertemuan-02/emmet.html
@@ -2,36 +2,59 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles.css">
+    <title>Judul Halaman</title>
 </head>
 <body>
-    <header>
-        <h1>ini header</h1>
-        <nav>
-            <u1>
-                <li><a href="#home">beranda</a></li>
-                <li><a href="#about">tentang</a></li>
-                <li><a href="#contact">kontak</a></li>
-            </u1>
-        </nav>
+    <header></header>
+    <h1>Ini Header</h1>
+    <nav>
+        <ul>
+            <li><a href="#home">Beranda</a></li>
+            <li><a href="#about">Tentang</a></li>
+            <li><a href="#contact">Kontak</a></li>
+        </ul>
+    </nav>
     </header>
     <main>
-        <section id="home">
-            <h2>Selamat datang</h2>
-            <p>Ini contoh paragraf</p>
-        </section>
-        <section id="about">
-            <h2>Tentang Saya</h2>
-            <p>Halo semua perkenalkan nama saya<strong>Reynanda Oktarian</strong></p>
-        </section>
-        <section id="contact">
-            <h2>Kontak kami</h2>
-            <p>Contoh form</p>
-        </section>
+     <section id="home">
+        <h2>Selamat Datang</h2>
+        <p>Ini contoh Paragraf HTML</p>
+     </section>
+     <section id="about">
+    <section id="about">
+  <h2>Tentang Saya</h2>
+  <p>
+    Halo! Nama saya <strong>Reynanda Oktarian</strong> (NIM: <strong>2511500054</strong>). 
+    Saya lahir di <em>Tanjung Pandan</em>, pada tanggal <em>29 Oktober 2007</em>. 
+    Saat ini saya adalah seorang <b>Mahasiswa</b> yang sedang belajar <b>Pengembangan Web Dasar</b>.
+  </p>
+  <p>
+    Hobi saya adalah <strong>Menonton Anime, Bermain game, dan mendegarkan musik</strong>. 
+    Saya juga suka mempelajari hal-hal baru tentang teknologi dan dunia digital.
+  </p>
+  <p>
+    Ayah saya bernama <strong>Mardedi</strong> dan ibu saya bernama <strong>Herlina</strong>. 
+    Saya memiliki Abang, yaitu <strong>Derry Andeka</strong>.
+  </p>
+  <p>Saya <strong>Tidak</strong>, memiliki pasangan, karena sendirian tidak terlalu buruk.</p>
+  <p>🙂</p>
+</section>
+     <section id="contact">
+        <h2>Kontak Kami</h2>
+        <p>Contoh Form</p>
+     </section>
+        <h2></h2>
+        <p>&copy; 2025 Reynanda Oktarian [2511500054]</p>
+    </section>
+    <section>
+        <h2></h2>
+        <p></p>
+    </section>
     </main>
     <footer>
-        <p>&copy; 2025 Reynanda Oktarian [2511500054]</p>
+        <p></p>
     </footer>
 </body>
 </html>
