--- a/pertemuan-03/index.html
+++ b/pertemuan-03/index.html
@@ -43,7 +43,19 @@
 </section>
      <section id="contact">
         <h2>Kontak Kami</h2>
-        <p>Contoh Form</p>
+          <form action="" method="GET">
+            <label for="txtNama">Nama:</label>
+            <input type="text" id="txtnama" name="txtnama" placeholder="masukkan nama" required autocomplete="name">
+
+            <label for="txtemail">Email:</label>
+            <input type="email" id="txtemail" name="txtemail" placeholder="Masukkan email" required autocomplete="email">
+
+            <label for="txtpesan">Pesan:</label>
+            <textarea id="txtpesan" name="txtpesan" rows="4" placeholder="Tulis pesan anda..." required></textarea>
+
+            <button type="submit">Kirim</button>
+            <button type="reset">Batal</button>
+          </form>
      </section>
         <h2></h2>
         <p>&copy; 2025 Reynanda Oktarian [2511500054]</p>
