--- a/pertemuan-03/index.html
+++ b/pertemuan-03/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
     <title>Judul Halaman</title>
 </head>
+
 <body>
     <header></header>
     <h1>Ini Header</h1>
@@ -18,55 +20,53 @@
     </nav>
     </header>
     <main>
-     <section id="home">
-        <h2>Selamat Datang</h2>
-        <p>Ini contoh Paragraf HTML</p>
-     </section>
-     <section id="about">
-    <section id="about">
-  <h2>Tentang Saya</h2>
-  <p>
-    Halo! Nama saya <strong>Reynanda Oktarian</strong> (NIM: <strong>2511500054</strong>). 
-    Saya lahir di <em>Tanjung Pandan</em>, pada tanggal <em>29 Oktober 2007</em>. 
-    Saat ini saya adalah seorang <b>Mahasiswa</b> yang sedang belajar <b>Pengembangan Web Dasar</b>.
-  </p>
-  <p>
-    Hobi saya adalah <strong>Menonton Anime, Bermain game, dan mendegarkan musik</strong>. 
-    Saya juga suka mempelajari hal-hal baru tentang teknologi dan dunia digital.
-  </p>
-  <p>
-    Ayah saya bernama <strong>Mardedi</strong> dan ibu saya bernama <strong>Herlina</strong>. 
-    Saya memiliki Abang, yaitu <strong>Derry Andeka</strong>.
-  </p>
-  <p>Saya <strong>Tidak</strong>, memiliki pasangan, karena sendirian tidak terlalu buruk.</p>
-  <p>🙂</p>
-</section>
-     <section id="contact">
-        <h2>Kontak Kami</h2>
-          <form action="" method="GET">
-            <label for="txtNama">Nama:</label>
-            <input type="text" id="txtnama" name="txtnama" placeholder="masukkan nama" required autocomplete="name">
+        <section id="home">
+            <h2>Selamat Datang</h2>
+            <p>Ini contoh Paragraf HTML</p>
+        </section>
+        <section id="about">
+            <section id="about">
+                <h2>Tentang Saya</h2>
+                <p><strong>NIM:</strong> 2511500054</p>
+                <p><strong>Nama Lengkap:</strong> Reynanda Oktarian 😎</p>
+                <p><strong>Tempat Lahir:</strong> Tanjung Pandan</p>
+                <p><strong>Tanggal Lahir:</strong> 29 Oktober 2007</p>
+                <p><strong>Hobi:</strong> Menonton Anime, Mendengarkan musik, bermain game 🎶</p>
+                <p><strong>Pasangan:</strong> Belum ada ♥</p>
+                <p><strong>Pekerjaan:</strong> Mahasiswa di ISB Atma Luhur © 2025</p>
+                <p><strong>Nama Orang Tua:</strong> Bapak Mardedi dan Ibu Herlina</p>
+                <p><strong>Nama Abang:</strong> Derry Andeka</p>
+            </section>
+            <section id="contact">
+                <h2>Kontak Kami</h2>
+                <form action="" method="GET">
+                    <label for="txtNama">Nama:</label>
+                    <input type="text" id="txtnama" name="txtnama" placeholder="masukkan nama" required
+                        autocomplete="name">
 
-            <label for="txtemail">Email:</label>
-            <input type="email" id="txtemail" name="txtemail" placeholder="Masukkan email" required autocomplete="email">
+                    <label for="txtemail">Email:</label>
+                    <input type="email" id="txtemail" name="txtemail" placeholder="Masukkan email" required
+                        autocomplete="email">
 
-            <label for="txtpesan">Pesan:</label>
-            <textarea id="txtpesan" name="txtpesan" rows="4" placeholder="Tulis pesan anda..." required></textarea>
+                    <label for="txtpesan">Pesan:</label>
+                    <textarea id="txtpesan" name="txtpesan" rows="4" placeholder="Tulis pesan anda..."
+                        required></textarea>
 
-            <button type="submit">Kirim</button>
-            <button type="reset">Batal</button>
-          </form>
-     </section>
-        <h2></h2>
-        <p>&copy; 2025 Reynanda Oktarian [2511500054]</p>
-    </section>
-    <section>
-        <h2></h2>
-        <p></p>
-    </section>
+                    <button type="submit">Kirim</button>
+                    <button type="reset">Batal</button>
+                </form>
+            </section>
+            <h2></h2>
+            <p>&copy; 2025 Reynanda Oktarian [2511500054]</p>
+        </section>
+        <section>
+            <h2></h2>
+            <p></p>
+        </section>
     </main>
     <footer>
         <p></p>
     </footer>
 </body>
+
 </html>
