buat form dan input color

--- a/pertemuan-03/index.html
+++ b/pertemuan-03/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
     <title>Judul Halaman</title>
+    ,<style>
+        #about {
+            background-color: ;
+        }
+    </style>
 </head>
 
 <body>
@@ -39,6 +44,7 @@
             </section>
             <section id="contact">
                 <h2>Kontak Kami</h2>
+                <input type="color">
                 <form action="" method="GET">
                     <label for="txtNama">Nama:</label>
                     <input type="text" id="txtnama" name="txtnama" placeholder="masukkan nama" required
