--- a/pertemuan-02/emmet.html
+++ b/pertemuan-02/emmet.html
@@ -25,21 +25,16 @@
      <section id="about">
     <section id="about">
   <h2>Tentang Saya</h2>
-  <p>
-    Halo! Nama saya <strong>Reynanda Oktarian</strong> (NIM: <strong>2511500054</strong>). 
-    Saya lahir di <em>Tanjung Pandan</em>, pada tanggal <em>29 Oktober 2007</em>. 
-    Saat ini saya adalah seorang <b>Mahasiswa</b> yang sedang belajar <b>Pengembangan Web Dasar</b>.
-  </p>
-  <p>
-    Hobi saya adalah <strong>Menonton Anime, Bermain game, dan mendegarkan musik</strong>. 
-    Saya juga suka mempelajari hal-hal baru tentang teknologi dan dunia digital.
-  </p>
-  <p>
-    Ayah saya bernama <strong>Mardedi</strong> dan ibu saya bernama <strong>Herlina</strong>. 
-    Saya memiliki Abang, yaitu <strong>Derry Andeka</strong>.
-  </p>
-  <p>Saya <strong>Tidak</strong>, memiliki pasangan, karena sendirian tidak terlalu buruk.</p>
-  <p>🙂</p>
+    <h2>Tentang Saya</h2>
+                <p><strong>NIM:</strong> 2511500054</p>
+                <p><strong>Nama Lengkap:</strong> Reynanda Oktarian 😎</p>
+                <p><strong>Tempat Lahir:</strong> Tanjung Pandan</p>
+                <p><strong>Tanggal Lahir:</strong> 29 Oktober 2007</p>
+                <p><strong>Hobi:</strong> Menonton Anime, Mendengarkan musik, bermain game 🎶</p>
+                <p><strong>Pasangan:</strong> Belum ada ♥</p>
+                <p><strong>Pekerjaan:</strong> Mahasiswa di ISB Atma Luhur © 2025</p>
+                <p><strong>Nama Orang Tua:</strong> Bapak Mardedi dan Ibu Herlina</p>
+                <p><strong>Nama Abang:</strong> Derry Andeka</p>
 </section>
      <section id="contact">
         <h2>Kontak Kami</h2>
