--- a/pertemuan-03/index.html
+++ b/pertemuan-03/index.html
@@ -6,9 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
     <title>Judul Halaman</title>
-    ,<style>
+    <style>
         #about {
-            background-color: ;
+            background-color: #ffffff;
+            border-radius: 10px;
+            padding: 20pc;
+            max-width: 700px;
+            margin: 20px auto;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+        #about h2 {
+            color:#003366;
+            border-bottom: 2px solid #003366;
+            
         }
     </style>
 </head>
