--- a/pertemuan-03/index.html
+++ b/pertemuan-03/index.html
@@ -15,10 +15,13 @@
             margin: 20px auto;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
+
         #about h2 {
-            color:#003366;
+            color: #003366;
             border-bottom: 2px solid #003366;
-            
+            padding-bottom: 6px;
+            margin-bottom: 0;
+            margin-bottom: 16px;
         }
     </style>
 </head>
@@ -40,40 +43,69 @@
             <p>Ini contoh Paragraf HTML</p>
         </section>
         <section id="about">
-            <section id="about">
-                <h2>Tentang Saya</h2>
-                <p><strong>NIM:</strong> 2511500054</p>
-                <p><strong>Nama Lengkap:</strong> Reynanda Oktarian 😎</p>
-                <p><strong>Tempat Lahir:</strong> Tanjung Pandan</p>
-                <p><strong>Tanggal Lahir:</strong> 29 Oktober 2007</p>
-                <p><strong>Hobi:</strong> Menonton Anime, Mendengarkan musik, bermain game 🎶</p>
-                <p><strong>Pasangan:</strong> Belum ada ♥</p>
-                <p><strong>Pekerjaan:</strong> Mahasiswa di ISB Atma Luhur © 2025</p>
-                <p><strong>Nama Orang Tua:</strong> Bapak Mardedi dan Ibu Herlina</p>
-                <p><strong>Nama Abang:</strong> Derry Andeka</p>
-            </section>
-            <section id="contact">
-                <h2>Kontak Kami</h2>
-                <input type="color">
-                <form action="" method="GET">
-                    <label for="txtNama">Nama:</label>
-                    <input type="text" id="txtnama" name="txtnama" placeholder="masukkan nama" required
-                        autocomplete="name">
+            <h2>Tentang Saya</h2>
+            <style>
+                #about p {
+                    display: flex;
+                    justify-content: flex-start;
+                    align-items: baseline;
+                    margin: 0;
+                    padding: 6px; 0;
+                    border-bottom: 1px solid #e6e6e6;
+                }
 
-                    <label for="txtemail">Email:</label>
-                    <input type="email" id="txtemail" name="txtemail" placeholder="Masukkan email" required
-                        autocomplete="email">
+                #about strong {
+                    min-width: 180px;
+                    color: #003366;
+                    font-weight: 600;
+                    text-align: right;
+                    padding-right: 16px;
+                    flex-shrink: 0;
+                }
 
-                    <label for="txtpesan">Pesan:</label>
-                    <textarea id="txtpesan" name="txtpesan" rows="4" placeholder="Tulis pesan anda..."
-                        required></textarea>
+                @media (max-width: 600px) {
+                    #about p {
+                        flex-direction: column;
+                        align-items: flex-start;
+                    }
 
-                    <button type="submit">Kirim</button>
-                    <button type="reset">Batal</button>
-                </form>
-            </section>
-            <h2></h2>
-            <p>&copy; 2025 Reynanda Oktarian [2511500054]</p>
+                    #about strong {
+                        text-align: left;
+                        padding-right: 0;
+                        margin-bottom: 2px;
+                    }
+                }
+            </style>
+            <p><strong>NIM:</strong> 2511500054</p>
+            <p><strong>Nama Lengkap:</strong> Reynanda Oktarian 😎</p>
+            <p><strong>Tempat Lahir:</strong> Tanjung Pandan</p>
+            <p><strong>Tanggal Lahir:</strong> 29 Oktober 2007</p>
+            <p><strong>Hobi:</strong> Menonton Anime, Mendengarkan musik, bermain game 🎶</p>
+            <p><strong>Pasangan:</strong> Belum ada ♥</p>
+            <p><strong>Pekerjaan:</strong> Mahasiswa di ISB Atma Luhur © 2025</p>
+            <p><strong>Nama Orang Tua:</strong> Bapak Mardedi dan Ibu Herlina</p>
+            <p><strong>Nama Abang:</strong> Derry Andeka</p>
+        </section>
+        <section id="contact">
+            <h2>Kontak Kami</h2>
+            <input type="color">
+            <form action="" method="GET">
+                <label for="txtNama">Nama:</label>
+                <input type="text" id="txtnama" name="txtnama" placeholder="masukkan nama" required autocomplete="name">
+
+                <label for="txtemail">Email:</label>
+                <input type="email" id="txtemail" name="txtemail" placeholder="Masukkan email" required
+                    autocomplete="email">
+
+                <label for="txtpesan">Pesan:</label>
+                <textarea id="txtpesan" name="txtpesan" rows="4" placeholder="Tulis pesan anda..." required></textarea>
+
+                <button type="submit">Kirim</button>
+                <button type="reset">Batal</button>
+            </form>
+        </section>
+        <h2></h2>
+        <p>&copy; 2025 Reynanda Oktarian [2511500054]</p>
         </section>
         <section>
             <h2></h2>
