--- a/pertemuan-03/index.html
+++ b/pertemuan-03/index.html
@@ -10,7 +10,7 @@
         #about {
             background-color: #ffffff;
             border-radius: 10px;
-            padding: 20pc;
+            padding: 20px;
             max-width: 700px;
             margin: 20px auto;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -50,8 +50,8 @@
                     justify-content: flex-start;
                     align-items: baseline;
                     margin: 0;
-                    padding: 6px; 0;
-                    border-bottom: 1px solid #e6e6e6;
+                    padding: 6px 0;
+                    border-bottom: 1px solid #e6e6e6
                 }
 
                 #about strong {
