--- a/pertemuan-03/index.html
+++ b/pertemuan-03/index.html
@@ -27,15 +27,15 @@
 </head>
 
 <body>
-    <header></header>
-    <h1>Ini Header</h1>
-    <nav>
-        <ul>
-            <li><a href="#home">Beranda</a></li>
-            <li><a href="#about">Tentang</a></li>
-            <li><a href="#contact">Kontak</a></li>
-        </ul>
-    </nav>
+    <header>
+        <h1>Ini Header</h1>
+        <nav>
+            <ul>
+                <li><a href="#home">Beranda</a></li>
+                <li><a href="#about">Tentang</a></li>
+                <li><a href="#contact">Kontak</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <section id="home">
