menambahkan style di section about

--- a/pertemuan-03/index.html
+++ b/pertemuan-03/index.html
@@ -77,12 +77,12 @@
                 }
             </style>
             <p><strong>NIM:</strong> 2511500054</p>
-            <p><strong>Nama Lengkap:</strong> Reynanda Oktarian 😎</p>
+            <p><strong>Nama Lengkap:</strong> Reynanda Oktarian &#128512;</p>
             <p><strong>Tempat Lahir:</strong> Tanjung Pandan</p>
             <p><strong>Tanggal Lahir:</strong> 29 Oktober 2007</p>
-            <p><strong>Hobi:</strong> Menonton Anime, Mendengarkan musik, bermain game 🎶</p>
-            <p><strong>Pasangan:</strong> Belum ada ♥</p>
-            <p><strong>Pekerjaan:</strong> Mahasiswa di ISB Atma Luhur © 2025</p>
+            <p><strong>Hobi:</strong> Menonton Anime, Mendengarkan musik, bermain game </p>
+            <p><strong>Pasangan:</strong> Belum ada </p>
+            <p><strong>Pekerjaan:</strong> Mahasiswa di ISB Atma Luhur 2025</p>
             <p><strong>Nama Orang Tua:</strong> Bapak Mardedi dan Ibu Herlina</p>
             <p><strong>Nama Abang:</strong> Derry Andeka</p>
         </section>
