memperbaiki section tentang

--- a/pertemuan-02/emmet.html
+++ b/pertemuan-02/emmet.html
@@ -23,18 +23,17 @@
         <p>Ini contoh Paragraf HTML</p>
      </section>
      <section id="about">
-    <section id="about">
-  <h2>Tentang Saya</h2>
     <h2>Tentang Saya</h2>
                 <p><strong>NIM:</strong> 2511500054</p>
-                <p><strong>Nama Lengkap:</strong> Reynanda Oktarian 😎</p>
+                <p><strong>Nama Lengkap:</strong> Reynanda Oktarian &#128512;</p>
                 <p><strong>Tempat Lahir:</strong> Tanjung Pandan</p>
                 <p><strong>Tanggal Lahir:</strong> 29 Oktober 2007</p>
-                <p><strong>Hobi:</strong> Menonton Anime, Mendengarkan musik, bermain game 🎶</p>
-                <p><strong>Pasangan:</strong> Belum ada ♥</p>
-                <p><strong>Pekerjaan:</strong> Mahasiswa di ISB Atma Luhur © 2025</p>
+                <p><strong>Hobi:</strong> Menonton Anime, Mendengarkan musik, bermain game </p>
+                <p><strong>Pasangan:</strong> Belum ada &hearts;</p>
+                <p><strong>Pekerjaan:</strong> Mahasiswa di ISB Atma Luhur</p>
                 <p><strong>Nama Orang Tua:</strong> Bapak Mardedi dan Ibu Herlina</p>
                 <p><strong>Nama Abang:</strong> Derry Andeka</p>
+                <P>&#9786;</P>
 </section>
      <section id="contact">
         <h2>Kontak Kami</h2>
