--- a/pertemuan-05/index.html
+++ b/pertemuan-05/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>Ini Header</h1>
-        <button class="menu-toggle" id="menuToggle" aria-table="Toggle-Navigation">
+        <button class="menu-toggle" id="menuToggle" aria-table="Toggle Navigation">
         &#9776;
         </button>
         <nav>
