--- a/pertemuan-05/index.html
+++ b/pertemuan-05/index.html
@@ -12,7 +12,7 @@
     <header>
         <h1>Ini Header</h1>
         <button class="menu-toggle" id="menuToggle" aria-table="Toggle Navigation">
-        &#9776;
+            &#9776;
         </button>
         <nav>
             <ul>
@@ -76,19 +76,18 @@
             <h2>Kontak Kami</h2>
             <form action="" method="GET">
                 <label for="txtNama"><span>Nama:</span>
-                    <input type="text" id="txtnama" name="txtnama" placeholder="masukkan nama" required
+                    <input type="text" id="txtNama" name="txtNama" placeholder="masukkan nama" required
                         autocomplete="name">
                 </label>
-                <label for="txtemail"><span>Email</span>
-                    <input type="email" id="txtemail" name="txtemail" placeholder="Masukkan email" required
-                        autocomplete="email">
+                <label for="txtEmail"><span>Email</span>
+                    <input type="Email" id="txtEmail" name="txtEmail" placeholder="Masukkan email" required
+                        autocomplete="Email">
                 </label>
-
-                <label for="txtpesan"><span>Pesan Anda</span>
-                    <textarea id="txtpesan" name="txtpesan" rows="4" placeholder="Tulis pesan anda..."
+                <label for="txtPesan"><span>Pesan Anda</span>
+                    <textarea id="txtPesan" name="txtPesan" rows="4" placeholder="Tulis pesan anda..."
                         required></textarea>
+                    <small id="charCount">0/200 karakter</small>
                 </label>
-
                 <button type="submit">Kirim</button>
                 <button type="reset">Batal</button>
             </form>
