--- a/pertemuan-05/index.html
+++ b/pertemuan-05/index.html
@@ -80,7 +80,7 @@
                         autocomplete="name">
                 </label>
                 <label for="txtEmail"><span>Email</span>
-                    <input type="Email" id="txtEmail" name="txtEmail" placeholder="Masukkan email" required
+                    <input type="email" id="txtEmail" name="txtEmail" placeholder="Masukkan Email" required
                         autocomplete="Email">
                 </label>
                 <label for="txtPesan"><span>Pesan Anda</span>
