--- a/pertemuan-05/index.html
+++ b/pertemuan-05/index.html
@@ -76,13 +76,15 @@
             <h2>Kontak Kami</h2>
             <form action="" method="GET">
                 <label for="txtNama"><span>Nama:</span>
-                    <input type="text" id="txtNama" name="txtNama" placeholder="masukkan nama" required
-                        autocomplete="name">
+                    <input type="text" id="txtNama" name="txtNama" placeholder="Masukkan nama" required
+                        autocomplete="name" />
                 </label>
-                <label for="txtEmail"><span>Email</span>
-                    <input type="email" id="txtEmail" name="txtEmail" placeholder="Masukkan Email" required
-                        autocomplete="Email">
+
+                <label for="txtEmail"><span>Email:</span>
+                    <input type="email" id="txtEmail" name="txtEmail" placeholder="Masukkan email" required
+                        autocomplete="email" />
                 </label>
+
                 <label for="txtPesan"><span>Pesan Anda</span>
                     <textarea id="txtPesan" name="txtPesan" rows="4" placeholder="Tulis pesan anda..."
                         required></textarea>
